fix broken styles and images

--- a/css/style.css
+++ b/css/style.css
@@ -240,7 +240,6 @@ button{
 
 #alert{
 	background-color: white;
-	width: 50%; 
 	margin: 10%;
 	color: black;
 	text-align: center;
@@ -252,8 +251,9 @@ button{
 	text-decoration: none;
 	color: white;
 	background-color: black;
-	margin-top: 100px;
+	display:inline-block;
 	padding: 15px;
+	width: 50%;
 }
 
 #about {
